fixed icon-wrapping on slim project-image

--- a/rewrite/style.css
+++ b/rewrite/style.css
@@ -41,7 +41,7 @@
 }
 
 body {
-    height: 100svh; /* for when the site is non-scrollable. less than 450px voids this */
+    min-height: 100svh; /* for when the site is non-scrollable. less than 450px voids this */
     background: var(--catppuccin-background-color);
     font-family: var(--default-font);
     color: var(--catppuccin-text-color);
@@ -99,7 +99,7 @@ footer {
 .def-site-wrapper {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: inherit;
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -164,7 +164,7 @@ footer {
     border-color: var(--catppuccin-teal);
 }
 
-#card-wrapper {
+#card-container {
     margin-top: 20px;
     margin-bottom: 20px;
     flex-wrap: wrap;
@@ -186,16 +186,14 @@ footer {
 }
 
 .card__icons {
-    width: inherit;
     flex-wrap: wrap;
     position: absolute;
     opacity: 0;
-    background-color: #1e1e2eaf;
-    padding-top: 15px; /* add some space to make the shadow centered */
-    border-radius: 10px;
-    box-shadow: 0 0 20px 20px #1e1e2eaf;
     transition: opacity ease var(--default-hoverOff-phase);
-    font-size: 0; /* removes whitespace between the links */
+}
+
+.icon {
+    padding-top: 20px;
 }
 
 .icon > a {
@@ -308,10 +306,6 @@ footer {
 }
 
 @media screen and (max-width: 450px) {
-    body {
-        height: unset;
-    }
-
     h1 {
         font-size: 2.1rem;
     }
@@ -324,6 +318,16 @@ footer {
     a,
     button {
         font-size: 0.8rem;
+    }
+
+    footer {
+        margin-left: -5px;
+        margin-right: -5px;
+    }
+
+    .def-site-wrapper {
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     #navbar > a {
